<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPoster"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/poster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="130dp"
                tools:src="@drawable/ic_launcher_foreground"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="@id/ivPoster"
                app:layout_constraintLeft_toLeftOf="@id/ivPoster"
                app:layout_constraintRight_toRightOf="@id/ivPoster" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/purple_500"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="24dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/title" />
                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/genre" />
                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/genre"
                        android:layout_marginTop="4dp"
                        android:paddingVertical="2dp"
                        android:textColor="@color/teal_200"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/genre" />
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/genre"
                        android:layout_toEndOf="@id/rating"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:isIndicator="true"
                        android:clickable="false"
                        android:numStars="5"
                        android:rating="4"
                        android:stepSize="0.05"
                        android:secondaryProgressTint="#00000000"
                        style="@android:style/Widget.Material.RatingBar.Small" />
                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/genre"
                        android:layout_toEndOf="@id/ratingBar"
                        android:layout_marginTop="4dp"
                        android:gravity="end"
                        android:textColor="@color/white"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/duration"
                        />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ratingBar"
                        android:layout_marginTop="8dp"
                        android:textColor="#4F4E67"
                        android:textSize="12sp"
                        android:text="@string/description" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/card"
                app:layout_constraintLeft_toLeftOf="@id/card"
                app:layout_constraintRight_toRightOf="@id/card" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="24dp"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:tint="@color/white"
                app:fabSize="normal"
                app:layout_constraintEnd_toEndOf="@id/card"
                app:layout_constraintTop_toBottomOf="@id/spacer"
                app:layout_constraintBottom_toBottomOf="@id/spacer"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:elevation="4dp"
        style="@style/Widget.AppCompat.Toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:elevation="8dp"
        android:padding="4dp"
        android:visibility="invisible"
        android:theme="@style/ColorProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?attr/progressBarStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>